bluetooth: Fix leak in getCharacteristics

We were not properly removing the callbacks from the map.

WebKit Linux Leak caught a leak in the getCharacteristics LayoutTests:

({"numberOfLiveActiveDOMObjects":[2,3]})

https://storage.googleapis.com/chromium-layout-test-archives/WebKit_Linux_Leak/17788/layout-test-results/results.html

Reproduced locally by running run_layout_tests.sh with --enable-leak-detection.

BUG=590865

Review URL: https://codereview.chromium.org/1746973002

Cr-Commit-Position: refs/heads/master@{#378339}

Former-commit-id: 542f9e5244355165647f0a6897b7c44bdc92503b